refactor(interview): 重构面试评估服务支持实时题目生成
- 移除批量评估逻辑，改为单题实时评估模式
- 新增面试题目流式订阅功能，支持实时接收新题目
- 优化评估服务架构，分离单题评估与整场报告生成功能
- 集成 Redis Stream 消费者处理异步评估任务
- 添加题目生成状态轮询等待机制
- 前端实现 SSE 连接管理与事件数据解析
- 扩展面试题目模型支持参考答案与关键点字段
- 配置异步任务线程池参数优化并发处理能力
- 添加 Spring Boot Actuator 依赖监控应用状态
- 更新 API 调用超时配置与错误处理机制